--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="hero">
   <header class="header">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-md-0">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -86,7 +86,7 @@
     </div>
     <div class="row">
 
-      <div class="aside col-sm-2" style="padding-top: 10px;">
+      <div class="aside col-md-2" style="padding-top: 10px;">
         <ul class="nav flex-column px-0 nav-justified w-100 h-100">
           <li class="nav-item">
             <a class="nav-link active h-100 d-flex justify-content-start align-items-center" href="#"><i
@@ -111,10 +111,10 @@
         </ul>
       </div>
 
-      <div class="col-sm-10" style="padding-top: 10px;">
+      <div class="col-md-10" style="padding-top: 10px;">
         <div class="row">
 
-          <div class="col-sm-7" style="padding-bottom: 10px;">
+          <div class="col-md-7" style="padding-bottom: 10px;">
             <!-- feature post -->
             <div id="feature-posts" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
@@ -153,7 +153,7 @@
             </div>
           </div>
 
-          <div class="col-sm-5">
+          <div class="col-md-5">
             <!-- video post -->
             <div id="video-posts" class="carousel slide" data-ride="carousel" style="padding-bottom: 10px;">
               <div class="carousel-inner">
