--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
       <div class="announcement-title d-flex justify-content-center align-items-center">
         <h2>آخر الأخبار</h2>
       </div>
-      <ul style="height: 24px;overflow: hidden;padding: 0;">
-        <li style="display: inline;padding-right:15px;">البوابة الجديدية للحج... جديدة من لبنات العصرنة</li>
-        <li style="display: inline;">البوابة الجديدية للحج... جديدة من لبنات العصرنة</li>
-        <li style="display: inline;">البوابة الجديدية للحج... جديدة من لبنات العصرنة</li>
-        <li style="display: inline;">البوابة الجديدية للحج... جديدة من لبنات العصرنة</li>
-        <li style="display: inline;">البوابة الجديدية للحج... جديدة من لبنات العصرنة</li>
-      </ul>
+        <ul style="white-space: nowrap;overflow:hidden;padding: 0;">
+          <li style="display: inline;padding-right:15px;">البوابة الجديدية للحج... جديدة من لبنات العصرنة</li>
+          <li style="display: inline;">البوابة الجديدية للحج... جديدة من لبنات العصرنة</li>
+          <li style="display: inline;">البوابة الجديدية للحج... جديدة من لبنات العصرنة</li>
+          <li style="display: inline;">البوابة الجديدية للحج... جديدة من لبنات العصرنة</li>
+          <li style="display: inline;">البوابة الجديدية للحج... جديدة من لبنات العصرنة</li>
+        </ul>
     </div>
     <div class="row">
 
-      <div class="aside col-md-2" style="padding-top: 10px;">
+      <div class="aside col-md-2 pr-md-0">
         <ul class="nav flex-column px-0 nav-justified w-100 h-100">
           <li class="nav-item">
             <a class="nav-link active h-100 d-flex justify-content-start align-items-center" href="#"><i
@@ -111,13 +111,13 @@
         </ul>
       </div>
 
-      <div class="col-md-10" style="padding-top: 10px;">
+      <div class="col-md-10">
         <div class="row">
 
           <div class="col-md-7" style="padding-bottom: 10px;">
             <!-- feature post -->
             <div id="feature-posts" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
+              <ol class="carousel-indicators" style="margin:0;">
                 <li data-target="#feature-posts" data-slide-to="0" class="active"></li>
                 <li data-target="#feature-posts" data-slide-to="1"></li>
                 <li data-target="#feature-posts" data-slide-to="2"></li>
@@ -153,7 +153,7 @@
             </div>
           </div>
 
-          <div class="col-md-5">
+          <div class="col-md-5 pl-md-0">
             <!-- video post -->
             <div id="video-posts" class="carousel slide" data-ride="carousel" style="padding-bottom: 10px;">
               <div class="carousel-inner">
@@ -195,10 +195,11 @@
 
               </div>
 
-              <div class="col-sm-6">
+              <div class="col-sm-6 pl-md-0">
                 <img src="images/nav-hadj.png" class="img-fluid">
                 <div class="content">
-                  <h2>الحج إلى بيت الله الحرام</h2>
+                    <object type="image/svg+xml" data="images/hadj.svg" stroke="#fff" fill="#fff" width="100px" height="auto">
+                    </object>
                 </div>
 
               </div>
@@ -220,6 +221,62 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+
+  <script>
+    let i = 0;
+    let speed = 10;
+    i = i + speed
+
+
+    // setInterval(function(){ 
+    //   $('.announcement ul').animate({scrollLeft: (-i) }, 1000);
+    //   console.log(i)
+    //   i++;
+    //   i = i + speed
+    //   // if(i > 0){
+    //   //   i = 0;
+    //   //   i = i + speed
+    //   // }
+    //   }, 1000);
+
+
+
+var content = $(".announcement ul");
+var contentWidth = content.outerWidth()/2;
+var scrollLeft = contentWidth;
+setInterval(function() {
+  if (scrollLeft <= 0)
+  scrollLeft = contentWidth;
+ 
+  
+  
+ content.scrollLeft(scrollLeft--);
+
+ console.log(scrollLeft)
+
+
+}, 20);
+
+
+// var content = $(".announcement ul");
+// var contentWidth = content.outerWidth()/2;
+// var scrollLeft = 0
+// setInterval(function() {
+//   if (scrollLeft > contentWidth)
+//   scrollLeft = 0
+ 
+  
+  
+//  content.scrollLeft(scrollLeft--);
+
+//  console.log(scrollLeft)
+
+
+// }, 20);
+
+
+</script>
+
 </body>
 
 </html>
