--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
     <div class="row">
 
-      <div class="aside col-md-2 pr-md-0">
+      <div class="aside col-md-2 pb-sm-10 pr-md-0">
         <ul class="nav flex-column px-0 nav-justified w-100 h-100">
           <li class="nav-item">
             <a class="nav-link active h-100 d-flex justify-content-start align-items-center" href="#"><i
