fix height column

--- a/index.html
+++ b/index.html
@@ -114,29 +114,29 @@
       <div class="col-md-10">
         <div class="row">
 
-          <div class="col-md-7" style="padding-bottom: 10px;">
+          <div class="col-md-7">
             <!-- feature post -->
-            <div id="feature-posts" class="carousel slide" data-ride="carousel">
+            <div id="feature-posts" class="carousel slide h-100" data-ride="carousel">
               <ol class="carousel-indicators" style="margin:0;">
                 <li data-target="#feature-posts" data-slide-to="0" class="active"></li>
                 <li data-target="#feature-posts" data-slide-to="1"></li>
                 <li data-target="#feature-posts" data-slide-to="2"></li>
               </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="images/featured-image.png">
+              <div class="carousel-inner h-100">
+                <div class="carousel-item active h-100">
+                  <img class="d-block w-100 h-100" src="images/featured-image.png">
                   <div class="carousel-content">
                     <h2>وكلات السياحة والأسفار المعتمدة لتنظيم الحج 1440ه/2009م</h2>
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="images/featured-image.png">
+                <div class="carousel-item h-100">
+                  <img class="d-block w-100 h-100" src="images/featured-image.png">
                   <div class="carousel-content">
                     <h2>وكلات السياحة والأسفار المعتمدة لتنظيم الحج 1440ه/2009م</h2>
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="images/featured-image.png">
+                <div class="carousel-item h-100">
+                  <img class="d-block w-100 h-100" src="images/featured-image.png">
                   <div class="carousel-content">
                     <h2>وكلات السياحة والأسفار المعتمدة لتنظيم الحج 1440ه/2009م</h2>
                   </div>
@@ -195,7 +195,7 @@
 
               </div>
 
-              <div class="col-sm-6 pl-md-0">
+              <div class="col-sm-6 pl-0">
                 <img src="images/nav-hadj.png" class="img-fluid">
                 <div class="content">
                     <object type="image/svg+xml" data="images/hadj.svg" stroke="#fff" fill="#fff" width="100px" height="auto">
